gcc/testsuite/g++.old-deja/g++.mike/p6149.C
// { dg-do assemble  }
// prms-id: 6149

int a[3 - sizeof(double)];	// { dg-error "" } 
